@@ -57,9 +57,10 @@
 		<!-- Driver Dependencies -->
 		<azure.keyvault.version>1.2.1</azure.keyvault.version>
 		<azure.adal4j.version>1.6.4</azure.adal4j.version>
-		<rest.client.version>1.6.5</rest.client.version>
+		<rest.client.version>1.6.7</rest.client.version>
 		<osgi.core.version>6.0.0</osgi.core.version>
 		<osgi.comp.version>5.0.0</osgi.comp.version>
+
 		<!-- JUnit Test Dependencies -->
 		<junit.platform.version>[1.3.2, 1.4.2]</junit.platform.version>
 		<junit.jupiter.version>5.4.2</junit.jupiter.version>
@@ -226,6 +227,21 @@
 							<excludedGroups>${excludedGroups}, xJDBC42</excludedGroups>
 						</configuration>
 					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-shade-plugin</artifactId>
+						<version>3.2.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>shade</goal>
+								</goals>
+								<configuration>
+									<shadedClassifierName>shaded.jre8-preview</shadedClassifierName>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -258,6 +274,21 @@
 								</manifestEntries>
 							</archive>
 						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-shade-plugin</artifactId>
+						<version>3.2.1</version>
+						<executions>
+							<execution>
+								<goals>
+									<goal>shade</goal>
+								</goals>
+								<configuration>
+									<shadedClassifierName>shaded.jre11-preview</shadedClassifierName>
+								</configuration>
+							</execution>
+						</executions>
 					</plugin>
 				</plugins>
 			</build>
@@ -295,6 +326,21 @@
 							</archive>
 						</configuration>
 					</plugin>
+					<plugin>
+						<artifactId>maven-shade-plugin</artifactId>
+						<version>3.2.1</version>
+						<executions>
+							<!-- Run shade goal on package phase -->
+							<execution>
+								<goals>
+									<goal>shade</goal>
+								</goals>
+								<configuration>
+									<shadedClassifierName>shaded.jre12-preview</shadedClassifierName>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
@@ -324,6 +370,40 @@
 			</testResource>
 		</testResources>
 		<plugins>
+			<plugin>
+				<artifactId>maven-shade-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+					<!-- Run shade goal on package phase -->
+					<execution>
+						<goals>
+							<goal>shade</goal>
+						</goals>
+						<configuration>
+							<artifactSet>
+								<excludes>
+									<exclude>junit:junit</exclude>
+									<exclude>jmock:*</exclude>
+									<exclude>*:xml-apis</exclude>
+									<exclude>org.apache.maven:lib:tests</exclude>
+									<exclude>log4j:log4j:jar:</exclude>
+								</excludes>
+							</artifactSet>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-enforcer-plugin</artifactId>
@@ -361,11 +441,12 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>3.0.0-M1</version>
 				<configuration>
-					<argLine>
-						${argLine} --illegal-access=permit
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>${argLine} --illegal-access=permit -Xmx1024m
+						-XX:MaxPermSize=256m
 					</argLine>
-					<excludedGroups>
-						${excludedGroups}</excludedGroups>
+					<excludedGroups>${excludedGroups}</excludedGroups>
 				</configuration>
 			</plugin>
 			<plugin>
